--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,7 +48,7 @@ body {
 	outline: none;
 }
 
-#btn-next-signup, #btn-next-verify {
+#btn-next-signup, #btn-next-verify, #btn-next-send {
 	width: 100%;
 	margin-top: 2em;
 }
