--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,9 +69,11 @@ body {
 
 
 .btn-back {
-  color: #333;
   background-color: #fff;
-  border: 1px solid #ea0a8e;
+  width: 30px;
+  height: 30px;
+  font-weight: bold;
+  border: 2px solid #ea0a8e;
   border-radius: 50%;
   margin-top: 20px;
   outline: none;
@@ -108,7 +110,7 @@ input[type=number] {
 	margin-left: auto;
 	margin-top: 1em;
   border: 4px solid #f3f3f3; /* Light grey */
-  border-top: 4px solid #3498db; /* Blue */ 
+  border-top: 4px solid #686868; /* Blue */ 
   border-radius: 50%;
   width: 60px;
   height: 60px;
